# Electricity-Shortfall-Challenge

./: .gitignore  Data_exploration.py  Dockerfile  README.md  Test_autoregressive_model.ipynb  app.py  config_and_logging.py  data_exploration_notebook.ipynb  data_loading.py  data_pipeline.py  inference.py  main.py  model_pipeline.py  models.py  pipeline.ipynb  plots.py  preprocessing.py  pyproject.toml  requirements.txt  sample_submission.csv  synthetic_test_data_aligned.json  test_cv.py  test_feature_processing.ipynb  test_hydra.py  test_input.json  test_local.py  test_pipeline.py  test_preprocessing.py
Configs/: baseline.yaml  shallow2_scaling_timeseriessplit.yaml  shallow4.yaml  test_config.yaml
Notebook/: Test_autoregressive_model.ipynb
Output/: predictions.csv  sample_submission.csv
configs/: baseline.yaml  config.yaml  config_cv.yaml  config_test.yaml  deep1.yaml  shallow1.yaml  shallow1_no_time_dummies.yaml  shallow1_scaling.yaml  shallow3_only_scikit.yaml  shallow4.yaml  shallow5_cv.yaml  test_config.yaml
notebooks/: feature_importance_exploration.ipynb  inference.ipynb  latest_model_info.json  model_wrapper.ipynb  pipeline.ipynb  test_imputers.ipynb  test_model.ipynb
prefect/: prefect_forecast_energy_flow.py
saved_models/: data_validation_model.py  preprocessing_pipeline.pkl  train_features.csv
scripts/: config_and_logging.py  cross_validation_and_tuning.py  data_loading.py  inference.py  main.py  model_pipeline.py  model_pipeline_cv.py  model_pipeline_cv2.py  models.py  old_main.py  preprocessing.py  train.py
tests/: fix_github_actions.py  (+4 more)
(+227 files in other folders)
